nextcloud/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: nextcloud
  name: nextcloud
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: nextcloud
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 80
